<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.KontakFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="731dp"
        android:layout_marginTop="1dp"
        android:text="@string/Kontak"
        android:textAlignment="center"
        android:textSize="30dp" />

    <ImageView
        android:layout_width="86dp"
        android:layout_height="79dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/kontak" />

    <ImageView
        android:layout_width="86dp"
        android:layout_height="79dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/email" />

    <ImageView
        android:layout_width="86dp"
        android:layout_height="79dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/instagram" />

    <TextView
        android:layout_width="256dp"
        android:layout_height="97dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="60dp"
        android:text="@string/kontak_telepon"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="306dp"
        android:layout_height="61dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="180dp"
        android:text="@string/kontak_email"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="306dp"
        android:layout_height="61dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="280dp"
        android:text="@string/kontak_sosmed"
        android:textSize="20dp" />


</FrameLayout>